Event listeners added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unstable Blocks</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./script/main.js" defer></script>
 </head>
 
 <body>
-    <ul>
+    <ul id="list">
         <li class="block" id="blc0"></li>
         <li class="block" id="blc1"></li>
         <li class="block" id="blc2"></li>
@@ -22,7 +21,18 @@
         <li class="block" id="blc7"></li>
         <li class="block" id="blc8"></li>
         <li class="block" id="blc9"></li>
+        <li class="block" id="blc10"></li>
+        <li class="block" id="blc11"></li>
+        <li class="block" id="blc12"></li>
+        <li class="block" id="blc13"></li>
+        <li class="block" id="blc14"></li>
+        <li class="block" id="blc15"></li>
+        <li class="block" id="blc16"></li>
+        <li class="block" id="blc17"></li>
+        <li class="block" id="blc18"></li>
+        <li class="block" id="blc19"></li>
     </ul>
+    <script src="./script/main.js" defer></script>
 </body>
 
 </html>
