--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+
+    <div id="blcCounter">
+        <h1 id="counterTitle">
+            Remaining blocks
+        </h1>
+        <h2 id="counterValue"></h2>
+    </div>
+
     <ul id="list">
         <li class="block" id="blc0"></li>
         <li class="block" id="blc1"></li>
